2002-10-31  Daniel Morgan <danmorg@sc.rr.com>

	* SchemaInfo.cs: added missing properties to fix mcs build

2002-05-05  Miguel de Icaza  <miguel@ximian.com>

	* DataTableMapping.cs, DataTableMappingCollection.cs: comment out
	interfaces we do not implement yet.

	* DbDataAdapter.cs: Stub IEnumerable, comment out interfaces
	we do not implement yet.

	* DbDataPermissionAttribute.cs: call base constructor.
